exports[`test doesn't display message if no user matches 1`] = `
<div
  className="messages" />
`;

exports[`test renders correctly 1`] = `
<div
  className="messages">
  <div
    className="message">
    <div
      className="message-content">
      <div
        className="user-details">
        <img
          alt=""
          className="user-details__avatar"
          src="http://dummyimage.com/100x100.jpg/5fa2dd/ffffff" />
      </div>
      <div
        className="message-details">
        <p
          className="message-details__content"
          title="arosec@bbb.org">
          Quisque erat eros, viverra eget, congue eget, semper rutrum, nulla.
        </p>
      </div>
    </div>
    <div
      className="message-info">
      <p
        className="user-details__name">
        Albert Rose
      </p>
      <p
        className="message-details__timestamp">
        2017-2-9 04:27:38
      </p>
    </div>
  </div>
</div>
`;

exports[`test renders unknownuser avatar for users without avatar 1`] = `
<div
  className="messages">
  <div
    className="message">
    <div
      className="message-content">
      <div
        className="user-details">
        <img
          alt=""
          className="user-details__avatar"
          src="/unknownuser.png" />
      </div>
      <div
        className="message-details">
        <p
          className="message-details__content"
          title="arosec@bbb.org">
          Quisque erat eros, viverra eget, congue eget, semper rutrum, nulla.
        </p>
      </div>
    </div>
    <div
      className="message-info">
      <p
        className="user-details__name">
        Albert Rose
      </p>
      <p
        className="message-details__timestamp">
        2017-2-9 04:27:38
      </p>
    </div>
  </div>
</div>
`;
